--- a/reports/templates/reports/cvss_form.html
+++ b/reports/templates/reports/cvss_form.html
@@ -4,6 +4,7 @@
 <head>
     <title>CVSS Calculator</title>
     <link rel="stylesheet" href="{% static 'reports/style.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
 
