--- a/reports/static/reports/style.css
+++ b/reports/static/reports/style.css
@@ -6,7 +6,7 @@ body {
 }
 .container {
     max-width: 900px;
-    margin: 100px auto;
+    margin: auto;
     background: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -33,7 +33,7 @@ label {
 select,
 input,
 button {
-    margin-top: 25px;
+    margin-top: 6px;
     width: 100%;
     padding: 12px;
     font-size: 16px;
