--- a/reports/templates/reports/cvss_form.html
+++ b/reports/templates/reports/cvss_form.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>CVSS Calculator</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logo.ico' %}">
     <link rel="stylesheet" href="{% static 'reports/style.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
